--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 version: 1
 services:
   - type: web
-    name: わかめtube
+    name: 向井のバーカチー牛万歳
     env: node
     plan: free
     buildCommand: npm install
